protocols/tests/adders/adder_d0/expects/illegal_observation_assertion.interp.add_d0.expect
error: Output 'DUT.s' depends on input(s) 'b' which do not have assigned values
   ┌─ protocols/tests/adders/adder_d0/add_d0.prot:22:3
   │
22 │   DUT.b := X;
   │   ^^^^^^^^^^^ 'b' assigned DontCare here
   ·
25 │   assert_eq(DUT.s, s); // this should be illegal
   │             ^^^^^ Output 'DUT.s' depends on input(s) 'b' which do not have assigned values

Trace 0 execution failed.
---CODE---
101
